--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.4.4",
     "@zeit/next-css": "^1.0.1",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.36.0",
@@ -17,6 +18,8 @@
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-to-print": "^2.14.12",
     "styled-components": "^5.3.9"
   }
