--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "html-entities": "^2.3.3",
     "next": "13.2.4",
     "openai": "^3.2.1",
     "react": "18.2.0",
