--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga": "^3.3.1",
     "react-hook-form": "^7.44.3",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-to-print": "^2.14.12",
