--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.4.4",
+    "@vercel/analytics": "^1.0.1",
     "@zeit/next-css": "^1.0.1",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.36.0",
